--- a/examples/infiniteScroll/infiniteScrollFixedHeader.html
+++ b/examples/infiniteScroll/infiniteScrollFixedHeader.html
@@ -1,5 +1,5 @@
 <div id="griddle-infinite-fixed-header"></div>
 
 <script type="text/jsx">
-	React.render(<Griddle results={fakeData} columnMetadata={columnMeta} rowMetadata={rowMeta} resultsPerPage={5} enableInfiniteScroll={true} useFixedHeader={true} bodyHeight={400}/>, document.getElementById('griddle-infinite-fixed-header'));
+	ReactDOM.render(<Griddle results={fakeData} columnMetadata={columnMeta} rowMetadata={rowMeta} resultsPerPage={5} enableInfiniteScroll={true} useFixedHeader={true} bodyHeight={400}/>, document.getElementById('griddle-infinite-fixed-header'));
 </script>
