--- a/examples/infiniteScroll/infiniteScroll.html
+++ b/examples/infiniteScroll/infiniteScroll.html
@@ -1,5 +1,5 @@
 <div id="griddle-infinite-scroll"></div>
 
 <script type="text/jsx">
-  React.render(<Griddle results={fakeData} columnMetadata={columnMeta} rowMetadata={rowMeta} resultsPerPage={5} enableInfiniteScroll={true} bodyHeight={400}/>, document.getElementById('griddle-infinite-scroll'));
+  ReactDOM.render(<Griddle results={fakeData} columnMetadata={columnMeta} rowMetadata={rowMeta} resultsPerPage={5} enableInfiniteScroll={true} bodyHeight={400}/>, document.getElementById('griddle-infinite-scroll'));
 </script>
